add resources file and add resource to html

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 	<h1>Discover places in the world around you</h1>
 	<a href="#">Download Excursion (Coming soon!)</a>
 	<video autoplay muted loop>
-		<source>
+		<source src="resources/excursion.mp4" type="video/mp4">
 	</video>
 	<h2>Your personal travel guide</h2>
 	<p>Excursion remembers places you like, and recommends new point of interest around you.</p>
-	<img>
-	<img>
+	<img src="resources/camp.jpg" alt="A scenic campsite">
+	<img src="resources/phone.png" alt="Phone with Excursion app">
 	<h2>Coming soon for iPhone and Android</h2>
 	<a href="#">Download Excursion (Coming soon!)</a>
 	<div class="footer">
