add some nasty css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<h1>Discover places in the world around you</h1>
-	<a href="#">Download Excursion (Coming soon!)</a>
+	<a href="#" class="cta">Download Excursion (Coming soon!)</a>
 	<video autoplay muted loop>
 		<source src="resources/excursion.mp4" type="video/mp4">
 	</video>
@@ -17,7 +17,7 @@
 	<img src="resources/camp.jpg" alt="A scenic campsite">
 	<img src="resources/phone.png" alt="Phone with Excursion app">
 	<h2>Coming soon for iPhone and Android</h2>
-	<a href="#">Download Excursion (Coming soon!)</a>
+	<a href="#" class="cta">Download Excursion (Coming soon!)</a>
 	<div class="footer">
 		<p>&copy; Excursion</p>
 	</div>
